8297431: [JVMCI] HotSpotJVMCIRuntime.encodeThrowable should not throw an exception

Reviewed-by: never